# tarlaanaliz-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRACTS_SHA256.txt  CONTRACTS_VERSION.md  Dockerfile  MANIFEST_CANONICAL.md  README.md  README_PATCH.md  UPDATED_FILES_TODO.md  alembic.ini  base_limits.yaml  docker-compose.yml  pyproject.toml  pytest.ini  seasonal_config.yaml
.github/workflows/: ci.yml  contract_validation.yml  deploy-staging.yml  frontend-ci.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260101_001_initial_users_roles.py  20260101_002_initial_fields_crops.py  20260101_003_initial_missions.py  20260102_004_subscriptions.py  20260102_005_pilots.py  20260102_006_experts.py  20260103_007_analysis_jobs.py  20260103_008_expert_reviews.py  20260104_009_weather_blocks.py  20260104_010_audit_logs.py  20260104_011_weekly_schedules.py  20260105_012_indexes_performance.py  20260105_013_full_text_search.py  20260129_kr033_payment_intents.py  20260201_kr082_calibration_qc_records.py  20260204_add_weather_block_reports.py  xxxx_kr015_mission_segments.py  xxxx_kr015_seasonal_reschedule_tokens.py
config/: logging.yaml
config/rate_limits/: base_limits.yaml  seasonal_config.yaml
docs/: GOVERNANCE_PACK_v1_0_0.md  KR-033_payment_flow.md  README.md  v3_2_2_tree_audit_report.md
docs/api/: authentication.md  openapi.yaml
docs/architecture/: adaptive_rate_limiting.md  clean_architecture.md  event_driven_design.md  expert_portal_design.md  subscription_scheduler_design.md  training_feedback_architecture.md
docs/archive/2026-02/: IS_PLANI_AKIS_DOKUMANI_v1_0_0_OLD.docx  IS_PLANI_AKIS_DOKUMANI_v1_0_0_UPDATED_2026-02-14.docx  KR-033_payment_flow_OLD.md  TARLAANALIZ_LLM_BRIEF_v1_0_0_OLD.md  TARLAANALIZ_PLAYBOOK_v1_0_0_OLD.md  TARLAANALIZ_SSOT_v1_0_0_DOCS_CLEAN_2026-02-14_v7.txt  TARLAANALIZ_SSOT_v1_0_0_OLD.txt  kr_registry_OPTIMAL_2026-02-14_v7.md  tarlaanaliz_platform_tree_v3.2.2_FINAL_2026-02-08_OLD.txt
docs/runbooks/: expert_onboarding_procedure.md  incident_response_payment_timeout.md  incident_response_sla_breach.md  payment_approval_procedure.md  weather_block_verification_procedure.md
docs/security/: ddos_mitigation_plan.md  model_protection_strategy.md
docs/views/: VIEW_3D_GROUPING.md  VIEW_CAPABILITIES.md  VIEW_SDLC.md
scripts/: analyze_rate_limit_logs.py  audit_v322_tree.py  backup_database.sh  export_training_dataset.py  generate_openapi.py  seed_data.py  seed_experts.py
src/application/: __init__.py
src/application/commands/: __init__.py  approve_payment.py  assign_mission.py  calculate_payroll.py  create_field.py  create_subscription.py  register_expert.py  report_weather_block.py  schedule_mission.py  submit_expert_review.py  submit_training_feedback.py  update_pilot_capacity.py  verify_weather_block.py
src/application/dto/: __init__.py  analysis_result_dto.py  expert_dashboard_dto.py  expert_dto.py  expert_review_dto.py  field_dto.py  mission_dto.py  payment_intent_dto.py  pilot_dto.py  subscription_dto.py  training_export_dto.py  user_dto.py  weather_block_dto.py
src/core/: __init__.py
src/presentation/: __init__.py
tests/: conftest.py
tests/e2e/: test_expert_journey.py  test_farmer_journey.py  test_payment_flow.py  test_pilot_journey.py
tests/fixtures/: __init__.py  domain_fixtures.py
tests/integration/: __init__.py  test_api_calibration_qc.py  test_api_fields.py  test_api_payments_and_webhooks.py  test_api_weather_block_reports.py
tests/unit/: test_analysis_completed_handler.py  test_calibration_gate.py  test_payment_intent_dto.py
web/: .env.example  README.md  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json
web/.storybook/: main.ts  preview.ts
web/e2e/: playwright.config.ts
web/public/: manifest.json  robots.txt  service-worker.js
web/src/: middleware.ts
web/src/i18n/: tr.ts
(+357 files in other folders)
